--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,10 +18,15 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@app/common": ["libs/common/src"],
-      "@app/common/*": ["libs/common/src/*"],
-
-      "@auth/*": ["apps/auth/src/*"]
+      "@app/common": [
+        "libs/common/src"
+      ],
+      "@app/common/*": [
+        "libs/common/src/*"
+      ],
+      "@auth/*": [
+        "apps/auth/src/*"
+      ]
     }
   }
 }
